# XEMIUtil

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ae.yml  ng.yml  se.yml  vr.yml
CMake/: Plugin.h.in  headerlist.cmake  sourcelist.cmake
CMake/ports/clib-util/: portfile.cmake  vcpkg.json
CMake/ports/commonlibsse/: portfile.cmake  vcpkg.json
CMake/ports/commonlibvr/: portfile.cmake  vcpkg.json
CMake/ports/mergemapper/: portfile.cmake  vcpkg.json
CMake/triplets/: x64-windows-mixed.cmake
include/: Config.h  Forms.h  Hooking.h  PCH.h
src/: Hooks.cpp  Main.cpp
